--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -3099,4 +3099,23 @@ p.resend-otp, .resend-otp {
   font-weight: 600;
 }
 
+.balance span.receipt{
+  color: #AB2656;
+  cursor: pointer;
+  display: block;
+  font-size: 12px
+}
+
+p.balance.ac-debit{
+  color: #444444 !important
+}
+
+p.acc-view-more {
+  color: #AB2656;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
 /*# sourceMappingURL=dashboard.css.map */
