Set Limit section done, updated Account history page functionality

--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -2613,3 +2613,8 @@ p.acc-view-more {
   cursor: pointer;
   margin-top: 20px;
 }
+
+.resend-otp:hover {
+  cursor: pointer !important;
+  text-decoration: underline !important;
+}
