--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -153,3 +153,11 @@
 .css-19bqh2r{
    height: 25px;
 }
+
+#forGroupLink {
+   color: #444444;
+}
+
+.selectionTray {
+   justify-content: center;
+}
