--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -10,6 +10,10 @@
     font-size: 14px;
     margin-bottom: 20px;
 }
+.back-cta{
+    color: #AB2656;
+    text-decoration: underline;
+}
 .conversion-msg {
     color: #AB2656;
     text-align: center;
