--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -17,6 +17,10 @@
    margin-right:10px;
 }
 
+.forGroupLink {
+   color: #444444 !important;
+}
+
 .goal-icon{
    padding-top: 20px;
    margin: 25px;
