--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -54,6 +54,30 @@
     padding-bottom: 10px;
 }
 
+.joinGroup h6 {
+    text-align: center;
+    font-family: Proxima Nova;
+    font-size: 16px;
+    line-height: 24px;
+    color: #444444;
+}
+
+.joinButton {
+    padding-bottom: 25px;
+}
+
+#enterCode {
+    padding: 20px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.joinButton button{
+  justify-content: center !important;
+}
+
 .butRight button {
     background-color: transparent;
     border-radius: 3px;
