--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -224,7 +224,8 @@
       min-width:150px;
       box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
       border-radius: 3px;
-      cursor: pointer;
+      text-decoration: none;
+
   }
   .btn-top-up-goal{
       background:#AB2656;
@@ -238,6 +239,8 @@
       min-width:150px;
       box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
       border-radius: 3px;
+      text-decoration: none;
+
   }
   .col-sm-4{
       border-bottom: 1px solid #AB2656;
