--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -108,15 +108,56 @@
     padding-right: 15px;
 }
 
+.smallnavtop {
+    width: 86% !important;
+    position: absolute;
+    top: 238px;
+}
+
+.smallnavtop  ul {
+    width: 100% !important;
+    /* background-color: black; */
+    float: right;
+}
+
+.smallnavtop ul li {
+    display: inline-block;
+    width: 25%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* color: white; */
+    text-align: center;
+    /* background-color: #A90836; */
+
+    font-family: Proxima Nova;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #FFFFFF;
+
+    background-color: #AB2656;
+    border-radius: 3px;
+    float: right;
+}
+
+#parentGoal {
+    /* color: black; */
+    color: #666666;
+}
+.smallnavtop ul li:first-child {
+    margin-left: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .compContainer .eachComp {
     width: 330px;
-    height: 250px;
+    height: 230px;
     border-radius: 2%;
     background-color: white;
     margin-left: 20px;
     margin-bottom: 20px;
     position: relative;
-    /* border: 1px solid black; */
 }
 
 .compContainer .eachComp .upper {
@@ -295,6 +336,42 @@ font-weight: bold;
     left: 17px;
 }
 
+.bottomDisCriptionTray {
+   width: 100%;
+   display: flex;
+   flex-wrap: nowrap;
+   position: absolute;
+   top: 170px;
+   padding-left: 15px;
+   padding-right: 15px;
+}
+
+.bottomDisCriptionTray .left {
+    width: 50%;
+}
+
+.bottomDisCriptionTray .right {
+    width: 50%;
+}
+
+.bottomDisCriptionTray .left p:first-child {
+    margin-bottom: 0px;
+    font-family: Proxima Nova;
+    font-size: 14px;
+    line-height: 17px;
+    color: #4D4D4D;
+    font-weight: bold;
+}
+
+.bottomDisCriptionTray .right p {
+    text-align: right;
+    font-weight: bold;
+    font-family: Proxima Nova;
+    font-size: 12px;
+    line-height: 14px;
+    color: #AB2656;
+    padding-top: 5px;
+}
 
 .butRight button {
     background-color: transparent;
