--- a/src/assets/css/loan.css
+++ b/src/assets/css/loan.css
@@ -125,3 +125,27 @@ max-width: 40%;
     overflow-y: scroll;  
     max-height: 350px;
 }
+
+.max-460 {
+  max-width: 460px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.upper-line-success {
+  background: #27ED3A;
+  min-height: 16px;
+}
+
+.upper-line-failure {
+  background: #dc3545;
+  min-height: 16px;
+}
+
+.result-msg {
+  margin: 40px 70px;
+}
+
+.unset-pad {
+  padding: unset !important;
+}
