--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -67,7 +67,7 @@
 }
 
 .compContainer {
-    width: 100%;
+    width: 32%;
     background-color: transparent;
     /*padding-top: 20px;*/
     /*padding-bottom: 20px;*/
@@ -496,12 +496,21 @@ font-weight: bold;
 }
 
 .moreDetails .left {
-   width: 50%;
+   width: 33%;
+}
+.moreDetails .middle {
+    width: 33%;
+}
+.moreDetails .middle p {
+    text-align: center;
+    margin-bottom: 0px;
+
 }
 
 .moreDetails .right {
-    width: 50%;
+    width:33%;
 }
+
 
 .moreDetails .right p {
     text-align: right;
@@ -512,7 +521,7 @@ font-weight: bold;
     margin-bottom: 0px;
 }
 
-.moreDetails .left p:first-child, .moreDetails .right p:first-child {
+.moreDetails .left p:first-child, .moreDetails .right p:first-child, .moreDetails .middle p:first-child {
 font-family: Proxima Nova;
 font-size: 14px;
 line-height: 17px;
