--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -14,6 +14,30 @@
     width: 70px;
     margin: 20px 0;
 }
+.limit-text{
+    color: #AB2656;
+    font-size: 13px;
+}
+.success-heading{
+    color: #AB2656;
+}
+.success-mg{
+    margin-top: 10px;
+    span{
+        font-weight: 600;
+    }
+}
+.return-text {
+    text-align: center;
+    a{
+        color: #AB2656!important;
+        font-weight: 600;
+        &:hover{
+            cursor: pointer;
+            text-decoration: underline!important;
+        }
+    }
+}
 .back-cta{
     color: #AB2656!important;
     text-decoration: underline!important;
