--- a/src/components/savings/savings.css
+++ b/src/components/savings/savings.css
@@ -262,4 +262,10 @@
   .form-row{
       justify-content: center;
   }
+.goal-Container{
+    width: 32%;
+    background-color: transparent;
+    display: flex;
+    flex-wrap: wrap;
 
+}
