--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -19,6 +19,103 @@
         margin-right: 14px;
     }
 }
+.history-wrap {
+    padding-bottom: 30px;
+}
+.lock-cta {
+    display: flex;
+    align-items:center;
+    margin-bottom: 15px;
+    justify-content: flex-end;
+}
+.comfirm-heading {
+    font-size: 18px;
+    margin-bottom: 26px;
+    color: #AB2656;
+}
+.toggle-button {
+    position: absolute;
+    width: 0.9em;
+    height: 0.9em;
+    border-radius: 50%;
+    background-color: #fff;
+    transition: -webkit-transform 100ms ease-in-out;
+    transition: transform 200ms ease-in-out;
+    transition: transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
+    z-index: 3;
+    border: 0.05rem solid #fff;
+    top: 0.05rem;
+  }
+  
+  .switch_is-off {
+    background-color: #ccc;
+  }
+  
+  .switch_is-on {
+    background-color: #45B39D!important;
+  }
+  .activecard-state{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    bottom: 6px;
+  }
+  .cardstatus{
+      height: 10px;
+      width: 10px;
+      line-height: 10px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 5px;
+      &.activecard{
+        background-color: #48C9B0
+      }
+      &.inactivecard{
+          background: #F2F4F4;
+      }
+  }
+  
+  .toggle-button_position-left {
+    -webkit-transform: translateX(-0.4rem);
+    transform: translateX(-0.4rem);
+  }
+  
+  .toggle-button_position-right {
+    -webkit-transform: translateX(0.33rem);
+    transform: translateX(0.33rem);
+  }
+.lock-cta span {
+    margin-right: 14px;
+    font-size: 15px;
+    &:nth-of-type(2){
+        margin-left: 5px;
+    }
+}
+.lock-msg {
+    margin-right: 16px;
+    font-size: 14px;
+    font-weight: 600;
+    }
+.eachhistory {
+    display: flex;
+    border-top: 1px solid rgba(0, 0, 0, 0.09);
+    padding: 7px 0;
+    align-items: center;
+    .two-items{
+        display: flex;
+        img{
+            margin-right: 5px;
+        }
+    }
+    >div{
+        flex: 1 1 0;
+        text-align: center;
+        padding: 0 8px;
+        margin: 10px 0;
+        align-items: center;
+    }
+}
 
 .sub-tab-nav ul li a.active-subnav {
     color: #AB2656;
