--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -258,9 +258,41 @@
     font-size: 14px;
 }
 
-.buttomButtonsJoinGroup {
-    
+.acceptAndDecline {
+    display: flex !important;
+    flex-wrap: nowrap !important;
+    padding-bottom: 50px;
 }
+.acceptAndDecline button {
+   background: #FFFFFF;
+   border: 1px solid #EDEDED;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
+   border-radius: 6px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   width: 95%;
+}
+
+.acceptAndDecline button:nth-child(2) {
+    width: 90%;
+    background: #FFFFFF;
+    border: 1px solid #EDEDED;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.06);
+    border-radius: 6px;
+    color: white;
+    border-radius: 3px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+ }
+
+ #hiddenReferralCode {
+    display: none;
+ }
+
+ #acepting {
+    background-color: #AB2656;
+    color: white;
+ }
 
 #valid {
     text-align: center;
