--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -211,6 +211,16 @@
             bottom: 20px;
         }
     }
+    &.choosecard{
+        position: absolute;
+        width: 100%;
+        max-width: 420px;
+        margin: 0 auto;
+        border-radius: 6px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
 }
 .return-text a.btn-alat {
     color: #fff!important;
