--- a/src/components/lifestyle/movie-preference-event.css
+++ b/src/components/lifestyle/movie-preference-event.css
@@ -78,7 +78,7 @@
   }
 
   .eventPreferences .buttons:hover {
-      color: #AB2656;
+      color: white;
       font-size: 16px;
       border: 1px solid #AB2656;
       font-family:"proxima_novasemibold";
@@ -100,7 +100,6 @@
   }
 
   .eventPreferences .buttons1:hover {
-
         color: #FFFFFF;
         font-size: 16px;
         font-family:"proxima_novasemibold";
