--- a/src/components/savings/group/group.css
+++ b/src/components/savings/group/group.css
@@ -18,7 +18,7 @@
 }
 
 .forCode h2 {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     text-align: center;
     width: 100% !important;
     margin-left: 15%;
@@ -62,7 +62,7 @@
 .butLeft button {
     background: #AB2656;
     border-radius: 3px;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 16px;
     line-height: 19px;
     /* identical to box height */
@@ -75,7 +75,7 @@
 
 .joinGroup h6 {
     text-align: center;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 16px;
     line-height: 24px;
     color: #444444;
@@ -116,7 +116,7 @@
 .forDetailsComp .upper {
     margin-bottom: 2px;
     font-weight: bold;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0.168px;
@@ -155,8 +155,8 @@
     display: inline-block;
     padding-top: 10px;
     padding-bottom: 10px; 
-    text-align: center; 
-    font-family: Proxima Nova;        
+    text-align: center;
+    font-family:"proxima_novasemibold";
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
@@ -171,7 +171,7 @@
     background: #AB2656;
     border-radius: 3px;
     color: white;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     margin-bottom: 40px;
 }
 
@@ -626,7 +626,7 @@ font-weight: bold;
 
 .firstSubHead p:nth-child(1) {
     padding-top: 20px;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 8px;
     line-height: 10px;
     /* identical to box height, or 125% */
@@ -636,7 +636,7 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(2) {
-    font-family: Proxima Nova;
+    font-family: "proxima_novasemibold";
     font-size: 12px;
     line-height: 14px;
     /* identical to box height */
@@ -646,7 +646,7 @@ font-weight: bold;
 }
 
 .firstSubHead p:nth-child(3) {
-    font-family: Proxima Nova;
+    font-family: "proxima_novasemibold";
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -732,6 +732,7 @@ font-weight: bold;
 
 .bottomDiscription span, .topDiscription span {
     color: #A90836;
+    text-transform: uppercase;
 }
 
 .bottomDiscription p {
@@ -816,13 +817,13 @@ color: #4D4D4D;
 }
 
 .moreDetails .left p:last-child, .moreDetails .right p:last-child, .moreDetails .middle p:last-child {
-    font-family:"proxima_novasemibold";
-    font-size: 10px;
+    font-family:"proxima_novaregular";
+    font-size: 11px;
     color: #878686;
     }
 
 .butProgBar {
-    font-family:"proxima_novaregular" !important;
+    font-family:"proxima_novaregular";
     font-size: 10px !important; 
     color: #717171 !important;
 }
@@ -876,7 +877,7 @@ color: #4D4D4D;
 }
 
 .listedItems p:first-child {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 14px;
     line-height: 17px;
     color: #FFFFFF;
@@ -915,21 +916,21 @@ color: #4D4D4D;
 }
 
 .listedItems p:last-child {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 12px;
     line-height: 14px;
     color: #9C9C9C;
 }
 
 .listedItemMembers .left p {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 14px;
     line-height: 17px;
     color: #444444;
 }
 
 .listedItemMembers .right  p:first-child {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 14px;
     line-height: 17px;
     text-align: right;
@@ -946,7 +947,7 @@ color: #4D4D4D;
 #manageButton {
     margin-top: 30px;
     color: #444444;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 12px;
     line-height: 14px;
     text-align: center;
@@ -958,7 +959,7 @@ color: #4D4D4D;
     text-align: center;
     margin-top: 70px;
     margin-bottom: 30px;
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 16px;
     line-height: 24px;
     text-align: center;
@@ -986,10 +987,13 @@ color: #4D4D4D;
 
 #autoSummary .right p:first-child { 
     padding-top: 10px;
+    font-family: "proxima_novaregular";
 }
 
 #autoSummary .left p:first-child { 
     padding-top: 20px;
+    font-family:"proxima_novasemibold";
+
 }
 
 #autoSummary p {
@@ -1025,21 +1029,21 @@ color: #4D4D4D;
     text-align: right;
 }
 
-#firstPoint {
-    font-family: Proxima Nova;
-font-size: 8px;
-line-height: 10px;
-/* identical to box height, or 125% */
+#firstPoint{
 
-text-transform: uppercase;
+    font-family:"proxima_novasemibold";
+    font-size: 8px;
+    line-height: 10px;
+    text-transform: uppercase;
+    color: #A90836;
+    margin-bottom: 10px;
+    margin-top: 40px;
 
-color: #A90836;
-margin-bottom: 10px;
-margin-top: 40px;
 }
 
+
 #secondPoint {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 14px;
     line-height: 17px;
     color: #4D4D4D;
@@ -1047,7 +1051,7 @@ margin-top: 40px;
 }
 
 #thirdPoint {
-    font-family: Proxima Nova;
+    font-family:"proxima_novasemibold";
     font-size: 10px;
     line-height: 12px;
     color: #717171;
@@ -1094,4 +1098,11 @@ margin-top: 40px;
 
 .shiftLeft {
     /* padding-left: 5px; */
+}
+.innerRight{
+    margin-top:57px;
+    display: flex;
+    color:#AB2656;
+    padding-left: 15px;
+    justify-content: space-between;
 }
